@@ -22,19 +22,26 @@ try_compile(
 
 set(AC_CONFIG_H_IN "${PROJECT_SOURCE_DIR}/include/pqxx/config.h.in")
 set(CM_CONFIG_H_IN "${PROJECT_BINARY_DIR}/include/pqxx/config_cmake.h.in")
-set(CM_CONFIG_PUB "${PROJECT_BINARY_DIR}/include/pqxx/config-public-compiler.h")
-set(CM_CONFIG_INT
-    "${PROJECT_BINARY_DIR}/include/pqxx/config-internal-compiler.h"
-)
-set(CM_CONFIG_PQ "${PROJECT_BINARY_DIR}/include/pqxx/config-internal-libpq.h")
-message(STATUS "Generating config.h")
+set(CONFIG_H "${PROJECT_BINARY_DIR}/include/pqxx/config.h")
+set(CONFIG_H_COM "${PROJECT_BINARY_DIR}/include/pqxx/config-compiler.h")
+message(STATUS "Generating configuration headers")
+
+# First we write config_cmake.h.in based on autoconf's config.h.in.
 file(WRITE "${CM_CONFIG_H_IN}" "")
 file(STRINGS "${AC_CONFIG_H_IN}" lines)
 foreach(line ${lines})
     string(REGEX REPLACE "^#undef" "#cmakedefine" l "${line}")
     file(APPEND "${CM_CONFIG_H_IN}" "${l}\n")
 endforeach()
-configure_file("${CM_CONFIG_H_IN}" "${CM_CONFIG_INT}" @ONLY)
-configure_file("${CM_CONFIG_H_IN}" "${CM_CONFIG_PUB}" @ONLY)
-configure_file("${CM_CONFIG_H_IN}" "${CM_CONFIG_PQ}" @ONLY)
-message(STATUS "Generating config.h - done")
+
+# Now have CMake write config.h based on that config_cmake.h.in.  This makes the
+# process look as much like the autoconf one as we can.
+configure_file("${CM_CONFIG_H_IN}" "${CONFIG_H}" @ONLY)
+
+# Then grab the PQXX macros from config.h and write them to config-compiler.h.
+execute_process(
+    COMMAND grep PQXX "${CONFIG_H}"
+    OUTPUT_FILE "${CONFIG_H_COM}"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+)
+message(STATUS "Generating configuration headers - done")
