@@ -1,22 +1,22 @@
-PACKAGE	internal	autotools
-PACKAGE_BUGREPORT	internal	autotools
-PACKAGE_NAME	internal	autotools
-PACKAGE_STRING	internal	autotools
-PACKAGE_TARNAME	internal	autotools
-PACKAGE_VERSION	internal	autotools
-PQXX_HAVE_ASSUME	public	compiler
-PQXX_HAVE_CHARCONV_FLOAT	internal	compiler
-PQXX_HAVE_CXA_DEMANGLE	internal	compiler
-PQXX_HAVE_GCC_PURE	public	compiler
-PQXX_HAVE_GCC_VISIBILITY	public	compiler
-PQXX_HAVE_MULTIDIM	public	compiler
-PQXX_HAVE_POLL       internal        compiler
-PQXX_HAVE_RANGES	public	compiler
-PQXX_HAVE_SLEEP_FOR	internal	compiler
-PQXX_HAVE_STACKTRACE	public	compiler
-PQXX_HAVE_STRERROR_R	public	compiler
-PQXX_HAVE_STRERROR_S	public	compiler
-PQXX_HAVE_TYPE_DISPLAY	public	compiler
-PQXX_HAVE_YEAR_MONTH_DAY	public	compiler
-PQXX_HAVE_ZARGS	public	compiler
-VERSION	internal	autotools
+PACKAGE	autotools
+PACKAGE_BUGREPORT	autotools
+PACKAGE_NAME	autotools
+PACKAGE_STRING	autotools
+PACKAGE_TARNAME	autotools
+PACKAGE_VERSION	autotools
+PQXX_HAVE_ASSUME	compiler
+PQXX_HAVE_CHARCONV_FLOAT	compiler
+PQXX_HAVE_CXA_DEMANGLE	compiler
+PQXX_HAVE_GCC_PURE	compiler
+PQXX_HAVE_GCC_VISIBILITY	compiler
+PQXX_HAVE_MULTIDIM	compiler
+PQXX_HAVE_POLL       compiler
+PQXX_HAVE_RANGES	compiler
+PQXX_HAVE_SLEEP_FOR	compiler
+PQXX_HAVE_STACKTRACE	compiler
+PQXX_HAVE_STRERROR_R	compiler
+PQXX_HAVE_STRERROR_S	compiler
+PQXX_HAVE_TYPE_DISPLAY	compiler
+PQXX_HAVE_YEAR_MONTH_DAY	compiler
+PQXX_HAVE_ZARGS	compiler
+VERSION	autotools
