@@ -10,7 +10,7 @@ install(
 ###MAKTEMPLATE:ENDFOREACH
     PATTERN internal/*.hxx
     PATTERN internal/gates/*.hxx
-    PATTERN config-public-compiler.h
+    PATTERN config-compiler.h
     PATTERN pqxx
     PATTERN doc EXCLUDE
 )
