@@ -1,13 +1,7 @@
 MAINTAINERCLEANFILES=Makefile.in stamp-h.in
 
-noinst_HEADERS = \
-	config-internal-autotools.h
-
 nodist_noinst_HEADERS = \
 	config.h \
-	config-internal-compiler.h
+	config-compiler.h
 
-DISTCLEANFILES = \
-	config-internal-autotools.h \
-	config-internal-compiler.h \
-	config-public-compiler.h
+DISTCLEANFILES = config-compiler.h
