@@ -15,9 +15,6 @@
  * mistake, or contact the author.
  */
 
-// Workarounds & definitions needed to compile libpqxx into a library.
-#include "pqxx/config-internal-compiler.h"
-
 #ifdef _WIN32
 
 #  ifdef PQXX_SHARED
