@@ -8,7 +8,6 @@ EXTRA_DIST = \
 	m4esc.py \
 	pqxxthreadsafety.cxx \
 	rmlo.cxx \
-	splitconfig.py \
 	template2mak.py \
 	todo.sh \
 	update-copyright.sh
