@@ -3,6 +3,9 @@
  - Any changes will be logged under "8.0.0".
  - `pqxx::zview` default constructor now also zero-terminates.
  - Libpqxx exceptions now have a `std::stacktrace`, if available.
+ - Replace generated config headers with just `config-compiler.h`. (#1152)
+ - CMake build now filters `config-compiler.h`, like the autoconfig build does.
+ - No longer generate `config-autotools.h`.
 8.0.0
  - C++20 is now the oldest C++ version that libpqxx supports.
  - Requires PostgreSQL 11 or better.
